# rustpipe

./: Cargo.toml  readme.md  rustfmt.toml
.github/: funding.yml
.github/workflows/: benches.yml  ci.yml  examples.yml  linting.yml  publish.yml  tests.yml
crates/rustpipe/: Cargo.toml  readme.md
crates/rustpipe-core/: Cargo.toml
crates/rustpipe-macros/: Cargo.toml  readme.md
crates/rustpipe-macros/src/: lib.rs
crates/rustpipe/benches/: async_middleware.rs  async_transform.rs  bench_large_pipeline.rs  pipeline.rs  sync_middleware.rs  sync_transform.rs
crates/rustpipe/examples/: actix_web_adapter.rs  async_jobs.rs  axum_adapter.rs  basic_transform.rs  data_validation.rs  gpu_wgpu_pipeline.rs  middleware_auth.rs
crates/rustpipe/src/: error.rs  errors.rs  lib.rs  pipeline.rs  types.rs  utility.rs
crates/rustpipe/src/middleware/: mod.rs
crates/rustpipe/src/transform/: mod.rs
crates/rustpipe/tests/: async_pipeline.rs  macro_attributes.rs  middleware_pipeline.rs  pipeline_stress.rs  sync_middleware_comprehensive.rs  sync_transform_comprehensive.rs  taps_feature.rs
examples/: async.rs  basic.rs
src/: pipeline.rs
