# Package configurations
[package]
    # The name of the crate as it will appear on crates.io
    name = "rustpipe"
    # A concise description of the crate’s purpose (shown on crates.io and docs.rs)
    description = "Composable pipelines in Rust — define steps, chain transformations, and handle errors with elegance."
    # Keywords to improve discoverability on crates.io
    keywords = ["pipeline", "pipe", "rust", "rustpipe", "handle"]
    # Author information (name and email)
    authors = ["Selçuk Çukur <hello@selcukcukur.me>"]
    # License identifier (SPDX format, e.g. MIT, Apache-2.0)
    license = "MIT"
    # Current crate version (Semantic Versioning compliant)
    version = "2.1.0"

    # Rust edition (modern syntax and features)
    edition = "2024"
    # Crates.io category (used for classification and discoverability)
    categories = ["rust-patterns", "data-structures", "asynchronous", "value-formatting"]
    # Documentation URL (published API reference on docs.rs)
    documentation = "https://docs.rs/rustpipe"
    # Repository URL (source code and issue tracker)
    repository = "https://github.com/selcukcukur/rustpipe"
    # Path to the readme file (displayed on crates.io)
    readme = "readme.md"

# Dependency configurations
[dependencies]
    # Serde is the core serialization/deserialization framework
    serde = { version = "1", features = ["derive"] }
    # Serde JSON is the JSON backend for Serde (used for structured log output)
    serde_json = "1"
    tokio = { version ="1.52.3", features = ["full"], optional = true }
    #
    rustpipe-macros = { version = "0.1.0", path = "../rustpipe-macros", optional = true }
    #
    thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "sync_transform"
harness = false

[[bench]]
name = "sync_middleware"
harness = false

[[bench]]
name = "async_transform"
harness = false
required-features = ["async"]

[[bench]]
name = "async_middleware"
harness = false
required-features = ["async"]

[[example]]
name = "basic_transform"
path = "examples/basic_transform.rs"

[[example]]
name = "middleware_auth"
path = "examples/middleware_auth.rs"

[[example]]
name = "axum_adapter"
path = "examples/axum_adapter.rs"

[[example]]
name = "actix_web_adapter"
path = "examples/actix_web_adapter.rs"

[[example]]
name = "data_validation"
path = "examples/data_validation.rs"

[[example]]
name = "gpu_wgpu_pipeline"
path = "examples/gpu_wgpu_pipeline.rs"

[[example]]
name = "async_jobs"
path = "examples/async_jobs.rs"
required-features = ["async"]

# Library configuration
[lib]
    # The library name (as exposed to other crates)
    name = "rustpipe"

    # Path to the library entry point (main source file)
    path = "src/lib.rs"
    crate-type = ["rlib", "cdylib"]

[features]
    default = []
    async = ["tokio"]
    taps  = []
    macros = ["rustpipe-macros"]
