# Package configurations
[package]
    name = "rustpipe"
    description = "Composable pipelines in Rust — define steps, chain transformations, and handle errors with elegance."
    keywords.workspace = true
    authors.workspace = true
    license.workspace = true
    version.workspace = true
    edition.workspace = true

    categories.workspace = true
    # Documentation URL (published API reference on docs.rs)
    documentation = "https://docs.rs/rustpipe"
    # Repository URL (source code and issue tracker)
    repository.workspace = true
    # Path to the readme file (displayed on crates.io)
    readme = "readme.md"

# Dependency configurations
[dependencies]
    # rustpipe-macros - Procedural macros crate for derive implementations and DSL support
    rustpipe-macros = { version = "0.1.0", path = "../rustpipe-macros", optional = true }

    # serde - Core framework for serialization and deserialization
    serde.workspace = true
    # serde_json - JSON backend for Serde, used for structured data and logging
    serde_json.workspace = true
    # tokio - Asynchronous runtime for Rust (networking, tasks, timers, etc.)
    tokio.workspace = true
    # thiserror - Lightweight error handling library for defining custom error types
    thiserror.workspace = true

[dev-dependencies]
criterion = "0.8.2"

[features]
default = []
async = ["tokio"]
taps  = []
macros = ["rustpipe-macros"]

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "sync_transform"
harness = false

[[bench]]
name = "sync_middleware"
harness = false

[[bench]]
name = "async_transform"
harness = false
required-features = ["async"]

[[bench]]
name = "async_middleware"
harness = false
required-features = ["async"]

[[example]]
name = "basic_transform"
path = "examples/basic_transform.rs"

[[example]]
name = "middleware_auth"
path = "examples/middleware_auth.rs"

[[example]]
name = "axum_adapter"
path = "examples/axum_adapter.rs"

[[example]]
name = "actix_web_adapter"
path = "examples/actix_web_adapter.rs"

[[example]]
name = "data_validation"
path = "examples/data_validation.rs"

[[example]]
name = "gpu_wgpu_pipeline"
path = "examples/gpu_wgpu_pipeline.rs"

[[example]]
name = "async_jobs"
path = "examples/async_jobs.rs"
required-features = ["async"]

# Library configuration
[lib]
    # The library name (as exposed to other crates)
    name = "rustpipe"

    # Path to the library entry point (main source file)
    path = "src/lib.rs"
    crate-type = ["rlib", "cdylib"]
